Updates from Overleaf

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -196,7 +196,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{QUALIFICATIONS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-8pt}
+\vspace{-7pt}
 \begin{outerlist}
 \item[\textbf{Ph.D.} \emph{Towards a Unified Computational Account of Semantic Impairments}]  \hfill \textbf{2014}
 
@@ -221,7 +221,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{EMPLOYMENT HISTORY}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\vspace{-6pt}
 \begin{outerlist}
 
  \item[\textbf{Donders Centre for Cognitive Neuroimaging, Radboud University}] \hfill
@@ -255,8 +255,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{SERVICE}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-10pt}
+\vspace{-6pt}
 \begin{outerlist}
+
+   \item[\textbf{\href{https://www.tandfonline.com/action/journalInformation?show=editorialBoard&journalCode=oaps20}{Cogent Psychology}} --- \textit{Editorial Board}] \hfill \textbf{2021--}
+
+
    \item[\textbf{\href{http://rescience.github.io/}{ReScience C Journal}} --- \textit{Editor-in-Chief}] \hfill \textbf{2020--}
    
    \item[\textbf{\href{https://joss.theoj.org/}{The Journal of Open Source Software}} --- \textit{Topic Editor}] \hfill \textbf{2019--}
@@ -264,21 +268,34 @@
    \item[\textbf{\href{http://rescience.github.io/}{ReScience C Journal}} --- \textit{Associate Editor}] \hfill \textbf{2015--2020}
    
  \item[\textbf{Conferences (ad hoc reviewing)}] \hfill
- 
-   International Conference on Learning Representations (ICLR), International Conference on Cognitive Modelling (ICCM), International Conference on Machine Learning (ICML), Scientific Computing with Python Conference (SciPy), EnviroInfo.
+           \begin{innerlist}
+          \item []    International Conference on Learning Representations (ICLR), International Conference on Cognitive Modelling (ICCM), International Conference on Machine Learning (ICML), Scientific Computing with Python Conference (SciPy), EnviroInfo.
+        \end{innerlist}
   
    \item[\textbf{Journals (ad hoc reviewing)}] \hfill
-    
-    Cognitive Neuropsychology,  Cognitive Psychology, Cognitive Science Journal, Journal of Cognitive Neuroscience, Journal of Open Source Education, Memory \& Cognition, PeerJ, PLoS Computational Biology, Royal Society Open Science.
-    
-   \item[\textbf{Special issue on \href{https://reproducibility-challenge.github.io/neurips2019/dates/}{NeurIPS 2019 Reproducibility Challenge}}] \hfill
+          \begin{innerlist}
+          \item [] Cognitive Neuropsychology,  Cognitive Psychology, Cognitive Science Journal, Journal of Cognitive Neuroscience, Journal of Open Source Education, Memory \& Cognition, PeerJ, PLoS Computational Biology, Royal Society Open Science.
+        \end{innerlist}
+
+   \item[\textbf{Special issue on \href{https://reproducibility-challenge.github.io/neurips2019/dates/}{NeurIPS 2019 Reproducibility Challenge}}]\hfill \textbf{2019}
+   \begin{innerlist}
+         \item Co-editing special issue of ReScience C.
+   \end{innerlist}
    
-   Co-editing special issue of Rescience C.
+   \item[\textbf{Computational \& statistical modelling office/social hours (with \href{http://samforbes.me/}{Samuel H. Forbes})}] \hfill \textbf{2021--}
+      \begin{innerlist}
+        \item Every Tuesday afternoon, 6pm C(S)ET onwards
+         \item  Students (especially in neuroscience and psychology) pop in for advice and mentoring.
+
+   \end{innerlist}
+   
  \end{outerlist}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{MAIN PUBLICATIONS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\vspace{10pt}
 
 \paper{
 \textbf{Guest, O.} \& Birhane, A. (2021). {Towards decolonising computational sciences}. \textit{Women, Gender \& Research.}\newline
@@ -400,9 +417,7 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
   \item[] \textit{Austin, Texas (Virtual)}\hfill\textbf{11 Feb 2021}
   \begin{innerlist}
     \item Workshop: \textit{Computational Modeling and Theory-Building}
-    % \item Organiser: John K. Sakaluk
-
-
+    \item Organiser: John K. Sakaluk
   \end{innerlist}
 \end{outerlist}
 \vspace{8pt}
@@ -414,7 +429,6 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
   \begin{innerlist}
     \item Talk: \textit{How computational modeling can force theory building in psychological science}
     \item Organisers: Emma Norris, Tabea Schoeler, \&  Jessie Baldwin
-
   \end{innerlist}
 \end{outerlist}
 \vspace{8pt}
@@ -424,9 +438,9 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
   \item[] \textit{Toronto, Canada (Virtual)}\hfill\textbf{25--28 Jul 2020}
   \begin{innerlist}
     \item Symposium: \textit{Perspectives on ``What makes a good theory?''}
+    \item Talk:  \href{https://youtu.be/8Aa9_6ahO48}{\textit{How computational modelling can force theory building in psychological science}}
     \item Organisers: Iris van Rooij \& Chris Donkin 
-    \item Talk:  \href{https://youtu.be/8Aa9_6ahO48}{\textit{How computational modelling can force theory building in psychological science}}.
-    \item  \href{https://youtu.be/8Aa9_6ahO48}{Link to video}.
+    \item  \href{https://youtu.be/8Aa9_6ahO48}{Click to watch video on YouTube}
   \end{innerlist}
 \end{outerlist}
 \vspace{8pt}
@@ -437,9 +451,8 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
   \begin{innerlist}
     \item Talk: \href{https://youtu.be/IhlF0B_IQJE}{\textit{How computational modeling can force theory building in psychological science}}
     \item Organiser: Miguel Xochicale
-    \item \href{https://youtu.be/IhlF0B_IQJE}{Link to video}.
-
-
+    \item NB: I have given this talk many times (not listed)
+    \item \href{https://youtu.be/IhlF0B_IQJE}{Click to watch video on YouTube}
   \end{innerlist}
 \end{outerlist}
 \vspace{8pt}
@@ -449,12 +462,15 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
 \begin{outerlist}
   \item[] \textit{Univeristy of Glasgow, UK (Virtual)}\hfill\textbf{20 Apr 2020}
   \begin{innerlist}
+    \item Speakers: Olivia Guest \& Andrea E. Martin
     \item Talk: \textit{\href{https://www.youtube.com/watch?v=_WV7EFvFAB8}{How computational modeling can force theory building in psychological science}}
     \item Organisers: Anna Henschel \& Stephanie Allan
-    \item Speakers: Olivia Guest \& Andrea E. Martin
+    \item \href{https://youtu.be/_WV7EFvFAB8}{Click to watch video on YouTube}
+
   \end{innerlist}
 \end{outerlist}
 \vspace{8pt}
+\begin{samepage}
 
 \textbf{\href{http://www.rise.org.cy/en-gb/}{Research Centre on Interactive Media, Smart Systems and Emerging Technologies}}
 \begin{outerlist}
@@ -464,8 +480,10 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
   \end{innerlist}
 \end{outerlist}
 \vspace{8pt}
+\end{samepage}
 
 \begin{samepage}
+
 \textbf{\href{https://icml.cc}{Thirty-fifth International Conference on Machine Learning (ICML 2018)}}
 \newline Workshop: \href{https://mltrain.cc/events/enabling-reproducibility-in-machine-learning-mltrainrml-icml-2018/}{Enabling Reproducibility in Machine Learning MLTrain@RML}
 \begin{outerlist}
@@ -474,8 +492,8 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
     \item Talk:  \textit{\href{https://figshare.com/articles/Varieties_of_Reproducibility_in_Empirical_and_Computational_Domains/6818018}{Varieties of Reproducibility in Empirical and Computational Domains}}.
   \end{innerlist}
 \end{outerlist}
-\vspace{8pt}
-\end{samepage}
+\vspace{8pt}\end{samepage}
+
 
 \textbf{\href{http://opendataday.org/}{Open Data Day 2018}}
 \begin{outerlist}
@@ -538,8 +556,8 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
 \begin{outerlist}
   \item[] \textit{Virtual}\hfill\textbf{20 Jul 2020}
   \begin{innerlist}
-    \item Talk (invited):  \href{https://youtu.be/8Aa9_6ahO48}{\textit{How computational modelling can force theory building in psychological science}}.
-    \item  \href{https://youtu.be/8Aa9_6ahO48}{Link to video}.
+    \item Talk (invited, see above section for more details):  \href{https://youtu.be/8Aa9_6ahO48}{\textit{How computational modelling can force theory building in psychological science}}.
+    \item  \href{https://youtu.be/8Aa9_6ahO48}{Click to watch video on YouTube}.
   \end{innerlist}
 \end{outerlist}
 \vspace{8pt}
@@ -550,11 +568,12 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
   \item[] \textit{Virtual}\hfill\textbf{30 Jun 2020}
   \begin{innerlist}
     \item Panel discussion (invited):  \href{https://github.com/ohbm/osr2020/issues/88}{\textit{Past, Present and Future of Open Science (Emergent session): Pre-registration, Registered reports}}.
-    \item  \href{https://youtu.be/VIbD6QXM8Zc}{Link to video}.
+    \item  \href{https://youtu.be/VIbD6QXM8Zc}{Click to watch video on YouTube}
   \end{innerlist}
 \end{outerlist}
 \vspace{8pt}
 
+\begin{samepage}
 
 \textbf{\href{https://www.sfn.org/meetings/neuroscience-2019}{Society for Neuroscience (SfN 2019)}}
 \begin{outerlist}
@@ -564,9 +583,11 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
     \item{Presented by: S. Bobadilla Suarez}
   \end{innerlist}
 \end{outerlist}
-\vspace{8pt}
+\vspace{8pt}\end{samepage}
 
 
+
+\begin{samepage}
 
 \textbf{\href{https://www.cancyprus.org/wp-content/uploads/2019/10/Conference-Booklet-2019-print.pdf}{9th Annual Scientific Conference of Center for Applied Neuroscience}}
 \begin{outerlist}
@@ -575,7 +596,8 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
     \item Talk (invited) and poster:  \textit{Levels of Representation in a Deep Learning Model of Categorization}.
   \end{innerlist}
 \end{outerlist}
-\vspace{8pt}
+\vspace{8pt}\end{samepage}
+
 
 \textbf{\href{http://www.cogs.indiana.edu/asic/2019/index.shtml}{18th Annual Summer Interdisciplinary Conference (ASIC 2019)}}
 \begin{outerlist}
@@ -586,6 +608,8 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
 \end{outerlist}
 \vspace{8pt}
 
+\begin{samepage}
+
 \textbf{\href{http://www.cognitivesciencesociety.org/conference/cogsci2017/}{ 39th Annual Meeting of the Cognitive Science Society (CogSci 2017)}}
 \begin{outerlist}
   \item[] \textit{London, UK}\hfill\textbf{26--29 Jul 2017}
@@ -593,9 +617,8 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
     \item Talk: \textit{Deep Networks as Models of Human and Animal Categorization}.
   \end{innerlist}
 \end{outerlist}
-\vspace{8pt}
+\vspace{8pt}\end{samepage}
 
-\begin{samepage}
 
 \textbf{\href{http://www.cogs.indiana.edu/asic/2017/index.shtml}{16th Annual Summer Interdisciplinary Conference (ASIC 2017)}}
 \begin{outerlist}
@@ -605,7 +628,7 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
   \end{innerlist}
 \end{outerlist}
 
-\vspace{8pt}\end{samepage}
+\vspace{8pt}
 
 \textbf{\href{http://wp.lancs.ac.uk/lcicd/past-events/}{1st Lancaster Conference on Infant and Early Child Development (LCICD 2016)}}
 \begin{outerlist}
@@ -667,6 +690,8 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
 \end{outerlist}
 \vspace{8pt}
 
+\begin{samepage}
+
 \textbf{\href{https://scipy2019.scipy.org}{18th Scientific Computing with Python Conference (SciPy 2019)}}
 \begin{outerlist}
   \item[] \textit{Austin, Texas, USA} \hfill \textbf{8--14 Jul 2019}
@@ -675,7 +700,8 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
     \item Reviewed conference submissions.
   \end{innerlist}
 \end{outerlist}
-\vspace{8pt}
+\vspace{8pt}\end{samepage}
+
 
 \textbf{\href{http://womenincogsci.org/announcement/wics-workshop-cognitive-science-society-meeting-madison-wisconsin}{Women in Cognitive Science (WiCS) Panel at 40th Annual Meeting of the Cognitive Science Society (CogSci 2018)}}
 \begin{outerlist}
@@ -839,7 +865,7 @@ Ada, C, \CC, C\#, Java, JavaScript, \LaTeX, MATLAB,  OpenGL, Pascal, PHP, Prolog
 \begin{innerlist}
     \item Email: \href{mailto:r.cooper@bbk.ac.uk}{r.cooper@bbk.ac.uk}
     \item Job title: Professor of Cognitive Science 
-    \item {Affiliations:} Psychological Sciences, Birkbeck, UK
+    \item {Affiliation:} Psychological Sciences, Birkbeck, UK
     \item Website: \href{http://ccnl.bbk.ac.uk/}{ccnl.bbk.ac.uk}
 \end{innerlist}
 
