minor edits, sections

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -282,10 +282,26 @@
          \item Co-editing special issue of ReScience C.
    \end{innerlist}
    
-   \item[\textbf{Computational \& statistical modelling office/social hours (with \href{http://samforbes.me/}{Samuel H. Forbes})}] \hfill \textbf{2021--}
+    \end{outerlist}
+
+   
+  \section{OUTREACH}
+  \vspace{-10pt}
+
+ \begin{outerlist}
+      \item[\textbf{Computational \& statistical modelling office/social hours (with \href{http://samforbes.me/}{Samuel H. Forbes})}] \hfill \textbf{2021--}
       \begin{innerlist}
         \item Every Tuesday afternoon, 6pm C(S)ET onwards
-         \item  Students (especially in neuroscience and psychology) pop in for advice and mentoring.
+         \item  Students (especially in neuroscience and psychology) pop in for advice and mentoring
+
+   \end{innerlist}
+   
+   
+  
+   \item[\textbf{Selected popular blog posts from:}] \href{http://neuroplausible.com}{neuroplausible.com} \hfill \textbf{2017--}
+      \begin{innerlist}
+        \item \href{https://neuroplausible.com/programming}{Why Women in Psychology Can't Program}
+         \item \href{https://neuroplausible.com/matlab}{I Hate Matlab: How an IDE, a Language, and a Mentality Harm} 
 
    \end{innerlist}
    
@@ -295,7 +311,7 @@
 \section{MAIN PUBLICATIONS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\vspace{10pt}
+% \vspace{10pt}
 
 \paper{
 \textbf{Guest, O.} \& Birhane, A. (2021). {Towards decolonising computational sciences}. \textit{Women, Gender \& Research.}\newline
@@ -835,7 +851,7 @@ Ada, C, \CC, C\#, Java, JavaScript, \LaTeX, MATLAB,  OpenGL, Pascal, PHP, Prolog
 \vspace{-10pt}
 
 \begin{outerlist}
-\item[\textbf{Andrea E. Martin},] \emph{Current PI/Employer}   \hfill \textbf{2020--}
+\item[\textbf{Andrea E. Martin}, \emph{Current PI/Employer}]   \hfill \textbf{2020--}
 \begin{innerlist}
     \item Email: \href{mailto:Andrea.Martin@mpi.nl}{andrea.martin@mpi.nl}
     \item Job title: Research Group Leader
@@ -844,7 +860,7 @@ Ada, C, \CC, C\#, Java, JavaScript, \LaTeX, MATLAB,  OpenGL, Pascal, PHP, Prolog
 \end{innerlist}
 
 
-\item[\textbf{Bradley C. Love},] \emph{Previous PI/Employer}   \hfill \textbf{2016--2019}
+\item[\textbf{Bradley C. Love}, \emph{Previous PI/Employer}] \hfill \textbf{2016--2019}
 \begin{innerlist}
     \item Email: \href{mailto:b.love@ucl.ac.uk}{b.love@ucl.ac.uk}
     \item Job title: Professor of Cognitive and Decision Sciences 
@@ -852,7 +868,7 @@ Ada, C, \CC, C\#, Java, JavaScript, \LaTeX, MATLAB,  OpenGL, Pascal, PHP, Prolog
     \item Website: \href{http://bradlove.org/}{bradlove.org}
 \end{innerlist}
 
-\item[\textbf{Nicolas P. Rougier},] \emph{Colleague (at ReScience) and collaborator}   \hfill \textbf{2015--}
+\item[\textbf{Nicolas P. Rougier},  \emph{Colleague (at ReScience) and collaborator}] \hfill \textbf{2015--}
 \begin{innerlist}
     \item Email: \href{mailto:Nicolas.Rougier@inria.fr }{nicolas.rougier@inria.fr}
     \item Job title: Professor --- Team Leader
@@ -861,7 +877,7 @@ Ada, C, \CC, C\#, Java, JavaScript, \LaTeX, MATLAB,  OpenGL, Pascal, PHP, Prolog
 \end{innerlist}
 
 
-\item[\textbf{Richard P. Cooper},] \emph{M.Sc. \& Ph.D. Supervisor}   \hfill \textbf{2009--2014}
+\item[\textbf{Richard P. Cooper}, \emph{M.Sc. \& Ph.D. Supervisor} ] \hfill \textbf{2009--2014}
 \begin{innerlist}
     \item Email: \href{mailto:r.cooper@bbk.ac.uk}{r.cooper@bbk.ac.uk}
     \item Job title: Professor of Cognitive Science 
